--- a/EventReminderApp2/EventReminderApp2.csproj
+++ b/EventReminderApp2/EventReminderApp2.csproj
@@ -205,6 +205,8 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\toastr.css" />
+    <Content Include="Content\toastr.min.css" />
     <Content Include="CSS\calenderIMG.jpg" />
     <Content Include="CSS\Home.css" />
     <Content Include="CSS\LoginReg.css" />
@@ -215,6 +217,8 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Content\toastr.scss" />
+    <Content Include="Content\toastr.less" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\FacebookAuthentication.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
@@ -229,6 +233,8 @@
     <Content Include="Scripts\LoginReg.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\RegFormValidate.js" />
+    <Content Include="Scripts\toastr.js" />
+    <Content Include="Scripts\toastr.min.js" />
     <Content Include="Scripts\UserHome.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
