Added Email notification

--- a/EventReminderApp2/Web.config
+++ b/EventReminderApp2/Web.config
@@ -16,6 +16,10 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+    <add key="SenderEmail" value="lekshmirajmr@gmail.com" />
+    <add key="SenderPassword" value="violet@15" />
+    
   </appSettings>
   <system.web>
     <authentication mode="None" />
