--- a/EventReminderApp2/Web.config
+++ b/EventReminderApp2/Web.config
@@ -25,6 +25,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
+    <sessionState mode="InProc" cookieless="false" timeout="5"/>
   </system.web>
   <system.webServer>
     <httpProtocol>
